--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "types": ["vite-plugin-glsl/ext"]
-  }
+    "types": ["vite-plugin-glsl/ext"],
+    "typeRoots": ["./node_modules/@types", "./types"]
+  },
+  "include": ["src/**/*", "types/**/*"]
 }
