--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,8 +12,9 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx",
+    "composite": true,
 
     /* Linting */
     "strict": true,
