--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   ],
   "compilerOptions": {
     "types": ["vite-plugin-glsl/ext"],
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types/", "./types", "./node_modules"]
   },
   "include": ["src/**/*", "types/**/*"]
 }
