--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,8 +11,7 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "emitDeclarationOnly": true,
-    "composite": true,
+    "noEmit": true,
 
     /* Linting */
     "strict": true,
@@ -21,5 +20,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*.ts", "vite.config.ts"]
+  "include": ["vite.config.ts"]
 }
