--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "@uiw/react-codemirror": "^4.23.7",
     "codemirror": "^6.0.1",
+    "gsap": "^3.12.7",
     "iconoir": "^7.10.1",
     "iconoir-react": "^7.10.1",
     "latest": "^0.2.0",
