--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/three": "^0.174.0",
     "@uiw/react-codemirror": "^4.23.7",
     "codemirror": "^6.0.1",
     "gsap": "^3.12.7",
